[gd_scene load_steps=5 format=3 uid="uid://bw5jlvivdw4s1"]

[ext_resource type="Texture2D" uid="uid://bq0t8i0nex62k" path="res://grass_block.png" id="1_1lrxa"]
[ext_resource type="Script" path="res://Label.gd" id="2_t2x0v"]
[ext_resource type="Texture2D" uid="uid://xk1sig45e2yp" path="res://PlayButton_1.png" id="3_82d6r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i3yme"]

[node name="Node2D" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0.658824, 0.780392, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(647, 420)
scale = Vector2(0.275156, 0.275156)
texture = ExtResource("1_1lrxa")

[node name="Button" type="Button" parent="."]
offset_left = -45.0
offset_top = -14.0
offset_right = 246.0
offset_bottom = 171.0
theme_override_colors/icon_pressed_color = Color(0.184314, 0.184314, 0.184314, 0.745098)
theme_override_styles/focus = SubResource("StyleBoxEmpty_i3yme")
icon = ExtResource("3_82d6r")
flat = true
icon_alignment = 1
expand_icon = true

[node name="DayCounter" type="Label" parent="."]
offset_left = 991.0
offset_top = 48.0
offset_right = 1084.0
offset_bottom = 79.0
script = ExtResource("2_t2x0v")

[node name="ProgressBar" type="ProgressBar" parent="DayCounter"]
offset_left = -14.0
offset_top = -6.0
offset_right = 244.0
offset_bottom = 29.0
max_value = 120.0
value = 120.0
rounded = true
show_percentage = false

[node name="CountdownTimer" type="Timer" parent="DayCounter"]
wait_time = 120.0
one_shot = true

[connection signal="pressed" from="Button" to="DayCounter" method="_on_Button_pressed"]
[connection signal="timeout" from="DayCounter/CountdownTimer" to="DayCounter" method="_on_timer_timeout"]
